// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Close> should close the modal 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="popover--40"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    <button
      aria-controls="popover--40"
      aria-expanded="true"
      aria-haspopup="dialog"
      aria-label="Close"
      data-testid="close"
    >
      Close me
    </button>
    Hello world
  </div>
  <button
    aria-controls="popover--40"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Close> should close the modal: closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="popover--40"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    <button
      aria-controls="popover--40"
      aria-expanded="false"
      aria-haspopup="dialog"
      aria-label="Close"
      data-testid="close"
    >
      Close me
    </button>
    Hello world
  </div>
  <button
    aria-controls="popover--40"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Popover> should have a custom id 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="popover--foobar"
    role="dialog"
    style="position: fixed; visibility: hidden; right: 1024px; top: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--foobar"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Popover> should provide context to function child 1`] = `
Object {
  "close": [Function],
  "id": "popover--0",
  "isOpen": false,
  "open": [Function],
  "placement": "bottom",
  "reposition": [Function],
  "setTriggeredBy": [Function],
  "style": Object {
    "bottom": 0,
    "left": 0,
    "right": 0,
    "top": 0,
  },
  "targetRef": Object {
    "current": null,
  },
  "toggle": [Function],
  "triggerRef": Object {
    "current": null,
  },
  "triggeredBy": null,
}
`;

exports[`<Target> open on Trigger focus: closed initially 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    id="popover--4"
    role="tooltip"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--4"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> open on Trigger focus: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="popover--open"
    id="popover--4"
    role="tooltip"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--4"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should act like a controlled component when 'open' prop is specified: closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="popover--12"
    role="dialog"
    style="position: fixed; visibility: hidden; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--12"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should act like a controlled component when 'open' prop is specified: initially open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="popover--12"
    role="dialog"
    style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--12"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should act like a controlled component when 'open' prop is specified: still closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="popover--12"
    role="dialog"
    style="position: fixed; visibility: hidden; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--12"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should act like a controlled component when 'open' prop is specified: still open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="popover--12"
    role="dialog"
    style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--12"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should apply custom classname when opened or closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    class="custom"
    id="popover--8"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--8"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should apply custom classname when opened or closed: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="custom popover--open"
    id="popover--8"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--8"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should apply user defined openClass and closedClass 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    class="closed"
    id="popover--9"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--9"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should apply user defined openClass and closedClass: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="open"
    id="popover--9"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--9"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should apply user defined openStyle and closedStyle 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="popover--10"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px; display: none;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--10"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should apply user defined openStyle and closedStyle: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="popover--10"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px; display: block;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--10"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should assign to custom styles when opened or closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="popover--7"
    role="dialog"
    style="position: fixed; visibility: hidden; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--7"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should assign to custom styles when opened or closed: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="popover--7"
    role="dialog"
    style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--7"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should be initially open when defined as such: closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="popover--11"
    role="dialog"
    style="position: fixed; visibility: hidden; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--11"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should be initially open when defined as such: initially open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="popover--11"
    role="dialog"
    style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--11"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should close on escape key: closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="popover--5"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--5"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should close on escape key: closed initially 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="popover--5"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--5"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should close on escape key: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="popover--5"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--5"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should have a tooltip role w/ focus trigger 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    id="popover--3"
    role="tooltip"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--3"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should have a tooltip role w/ hover trigger 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    id="popover--2"
    role="tooltip"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--2"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="popover--1"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--1"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: closed initially 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="popover--1"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--1"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="popover--1"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--1"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> should render into a portal by custom selector 1`] = `
<body>
  <div
    class="portals"
  >
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--15"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
  </div>
  <div>
    <button
      aria-controls="popover--15"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render into a portal by custom selector object 1`] = `
<body>
  <div
    class="portals"
  >
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--14"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
  </div>
  <div>
    <button
      aria-controls="popover--14"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render into a portal by default ID 1`] = `
<body>
  <div
    id="portals"
  >
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--13"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
  </div>
  <div>
    <button
      aria-controls="popover--13"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: bottom 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--22"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--22"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: bottomLeft 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--23"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 0px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--23"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: bottomRight 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--24"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--24"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: center 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--36"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--36"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: innerBottom 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--32"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--32"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: innerBottomLeft 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--33"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 0px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--33"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: innerBottomRight 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--34"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--34"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: innerLeft 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--35"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 0px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--35"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: innerRight 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--31"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--31"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: innerTop 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--28"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--28"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: innerTopLeft 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--29"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 0px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--29"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: innerTopRight 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--30"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--30"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: left 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--25"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--25"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: leftBottom 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--27"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--27"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: leftTop 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--26"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--26"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: right 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--19"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 0px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--19"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: rightBottom 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--21"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 0px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--21"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: rightTop 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--20"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 0px; bottom: 0px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--20"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: top 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--16"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--16"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: topLeft 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--17"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 0px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--17"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> should render to different placements: topRight 1`] = `
<body>
  <div>
    <div
      aria-hidden="false"
      aria-modal="false"
      class="popover--open"
      id="popover--18"
      role="dialog"
      style="position: fixed; visibility: visible; font-size: 2rem; top: 0px; right: 1024px; bottom: 768px; left: 0px;"
    >
      Hello world
    </div>
    <button
      aria-controls="popover--18"
      aria-expanded="true"
      aria-haspopup="dialog"
    >
      popover me
    </button>
  </div>
</body>
`;

exports[`<Target> shouldn't close on escape key if prop is false: closed initially 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="popover--6"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--6"
    aria-expanded="false"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> shouldn't close on escape key if prop is false: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="popover--6"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--6"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Target> shouldn't close on escape key if prop is false: still open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="popover--6"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--6"
    aria-expanded="true"
    aria-haspopup="dialog"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Trigger> should have openClass and closedClass 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="popover--38"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--38"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="closed"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Trigger> should have openClass and closedClass: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="popover--38"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--38"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="open"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Trigger> should have openStyle and closedStyle 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    aria-modal="false"
    id="popover--39"
    role="dialog"
    style="position: fixed; visibility: hidden; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--39"
    aria-expanded="false"
    aria-haspopup="dialog"
    style="display: none;"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`<Trigger> should have openStyle and closedStyle: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-modal="false"
    class="popover--open"
    id="popover--39"
    role="dialog"
    style="position: fixed; visibility: visible; top: 0px; right: 1024px; bottom: 0px; left: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="popover--39"
    aria-expanded="true"
    aria-haspopup="dialog"
    style="display: block;"
  >
    popover me
  </button>
</DocumentFragment>
`;

exports[`usePopover() should return context 1`] = `
Object {
  "close": [Function],
  "id": "popover--43",
  "isOpen": false,
  "open": [Function],
  "placement": "bottom",
  "reposition": [Function],
  "setTriggeredBy": [Function],
  "style": Object {
    "bottom": 0,
    "left": 0,
    "right": 0,
    "top": 0,
  },
  "targetRef": Object {
    "current": null,
  },
  "toggle": [Function],
  "triggerRef": Object {
    "current": null,
  },
  "triggeredBy": null,
}
`;
